Archive2/3e/1bff21309be824/output
main.cpp: In function 'int main()':
main.cpp:8:9: error: cannot declare reference to 'T2 {aka struct T1&}'
     T2& t = x;
         ^
main.cpp:8:9: warning: unused variable 't' [-Wunused-variable]
